add redirection URL note

--- a/contact_form_SCA_with_comments.html
+++ b/contact_form_SCA_with_comments.html
@@ -71,6 +71,7 @@
     <textarea id="lead_notes" maxlength="240" name="00N3X00000GoT3y" required=""></textarea>
     <!-- Hidden fields -->
     <input name="00N3X00000Goi09" type="hidden" value="Government" />
+    <!-- Redirection URL -->
     <input name="retURL" type="hidden" value="https://www.smartcitiesadvisor.com/thank-you/" />
     <input name="00N3X00000LsGqJ" type="hidden" value="Market Research" />
     <!-- Submit button that contains inline styles -->
